--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
   },
   "dependencies": {
     "amqplib": "^0.5.2",
+    "axios": "^0.18.0",
     "body-parser": "^1.18.3",
     "express": "^4.16.4",
     "helmet": "^3.14.0",
@@ -53,6 +54,7 @@
     "mongoose": "^5.3.8",
     "morgan": "^1.9.1",
     "passport": "^0.4.0",
-    "passport-jwt": "^4.0.0"
+    "passport-jwt": "^4.0.0",
+    "querystring": "^0.2.0"
   }
 }
