--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "@types/passport": "^0.4.6",
     "@types/passport-jwt": "^3.0.1",
     "@types/supertest": "^2.0.6",
+    "axios-mock-adapter": "^1.16.0",
     "chai": "^4.2.0",
     "cross-env": "^5.2.0",
     "jsonwebtoken": "^8.3.0",
